# par_io

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: rust.yml
examples/: example_parallel_read.rs  example_parallel_write.rs
src/: lib.rs  read.rs  write.rs
src/io/: io_at_unix.rs  io_at_windows.rs  mod.rs
src/read/: mod.rs
src/write/: mod.rs
tests/: read-write.rs
