[package]
name = "par_io"
version = "0.3.7"
authors = ["Ugo Varetto <ugovaretto@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.60"
description = "Parallel, async file I/O library with control over memory usage with no dependencies."
repository = "https://github.com/uv-rust/par_io"
homepage = "https://github.com/uv-rust/par_io"
readme = "Readme.md"
documentation = "https://docs.rs/par_io"
keywords = ["io", "parallel", "async", "file"]
categories = ["Asynchronous", "Filesystem", "Concurrency"]

[dependencies]